# Constructs

./: Cargo.toml  README.md
channels/: Cargo.toml
channels/src/: main.rs
channels/src/channels/: mod.rs  passing_rx.rs
closur_traits/: Cargo.toml
closur_traits/src/: main.rs
closur_traits/src/traits/: mod.rs
generics/src/: main.rs
generics_impl/src/: main.rs
interior_mutability/src/: cell.rs  lib.rs  main.rs  mutex.rs  rc.rs  ref_cell.rs
iterators/: ReadMe.txt
iterators/src/: main.rs
lifetimes/: Cargo.toml
lifetimes/src/: lib.rs  lifetimes.rs  main.rs  structs_lt.rs
minigrep/src/: main.rs
playground/: Cargo.toml
playground/src/: drop_deref.rs  main.rs
smart_pointers/src/: arcc.rs  boxx.rs  celll.rs  lib.rs  mutexx.rs  rcc.rs
threads/: Cargo.toml
threads/src/: fut.rs  lib.rs  main.rs  main.txt
threads/src/fut/: future.rs  sync.rs
threads/src/ps/: sender.ps1
trait_objects/src/: lib.rs  traitobjs.rs
traits_impls/: Cargo.toml
traits_impls/src/: main.rs
