[package]
name = "constructs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["channels", "closur_traits", "generics" ,"generics_impl", "interior_mutability",  
          "iterators","lifetimes", "minigrep", "playground", "smart_pointers" ,"threads" , "traits_impls" , "trait_objects"
           ]

[dependencies]


