[package]
name = "threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10"
futures = "0.3"
futures-timer = "3.0"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["full"] }
# tokio = { version = "1.25.0", features = ["full"] }